force-app/main/default/objects/SystemLimits__c/SystemLimits__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Limits</label>
</CustomObject>