force-app/main/default/objects/SystemLimits__c/fields/CpuTime__c.field-meta.xml
<CustomField>
    <fullName>CpuTime__c</fullName>
    <label>CPU Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>