force-app/main/default/objects/SystemLimits__c/fields/DMLRows__c.field-meta.xml
<CustomField>
    <fullName>DMLRows__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DML Rows</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>