force-app/main/default/objects/SystemLimits__c/fields/DMLStatements__c.field-meta.xml
<CustomField>
    <fullName>DMLStatements__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DML Statements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>