force-app/main/default/objects/SystemLimits__c/fields/EmailInvocations__c.field-meta.xml
<CustomField>
    <fullName>EmailInvocations__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Email Invocations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>