force-app/main/default/objects/SystemLimits__c/fields/SOQLQueries__c.field-meta.xml
<CustomField>
    <fullName>SOQLQueries__c</fullName>
    <label>SOQL Queries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>