force-app/main/default/objects/SystemLimits__c/fields/SoslQueries__c.field-meta.xml
<CustomField>
    <fullName>SoslQueries__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SOSLQueries</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>